Restructure the project
Now we have a main Rust binary project and one Python binding one

--- a/py_binding/Cargo.toml
+++ b/py_binding/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 pyo3 = {version = "0.8.1", features = ["extension-module"]}
-cartograph = {path = "../cartograph"}
+ptolemy = {path = "../"}
 
 [lib]
 name = "cartograph"
