--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ byteorder = "1.3.2"
 structopt = "0.3.5"
 num_cpus = "1.11.1"
 flate2 = "1.0.13"
+actix-web = "2.0"
+actix-rt = "1.0"
+failure = "0.1.6"
 
 [workspace]
 
