--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,27 +2,27 @@
 name = "ptolemy"
 version = "0.1.0"
 authors = ["Guilherme <sitegui@sitegui.com.br>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-osmpbf = "0.1.13"
-memmap = "0.7.0"
-tempfile = "3.1.0"
-crossbeam = "0.7.3"
-petgraph = "0.5.0"
-rstar = "0.7.0"
+osmpbf = "0.2"
+memmap = "0.7"
+tempfile = "3.3"
+crossbeam = "0.8"
+petgraph = "0.6"
+rstar = "0.9"
 byteorder = "1.3.2"
-structopt = "0.3.5"
-num_cpus = "1.11.1"
-flate2 = "1.0.13"
-actix-web = "2.0"
-actix-rt = "1.0"
-failure = "0.1.6"
-serde = "1.0"
-polyline = "0.7"
-geo-types = "0.4"
+clap = { version = "3.0", features = ["derive"] }
+num_cpus = "1.13"
+flate2 = "1.0"
+actix-web = "4.0"
+actix-rt = "2.7"
+thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+polyline = "0.9"
+geo-types = "0.7"
 page_size = "0.4"
 
 [profile.release]
